src/components/Contact/Contact.css
/* Large desktops */
@media (max-width: 1750px) {
  .contact-sub {
    margin: 0 0 2.5rem;
  }

  .contact-grid {
    display: flex;
    gap: 2.5rem;
  }

  .contact-info {
    width: 22.5rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .available-badge {
    height: 2.8125rem;
    background-color: rgba(var(--text-success), 0.2);
    padding: 0.75rem 0.875rem;
    border: 1px solid rgba(var(--text-success), 0.4);
    border-radius: 0.5rem;
    display: flex;
    gap: 1rem;
    align-items: center;
  }

  .available-dot {
    width: 0.625rem;
    height: 0.625rem;
    border-radius: 3.125rem;
    background-color: rgb(var(--text-success));
  }

  .available-text {
    color: rgb(var(--text-success));
  }

  .contact-link {
    height: 4.0625rem;
    padding: 0.75rem 0.875rem;
    background-color: rgb(var(--primary-surface));
    border: 1px solid var(--primary-border);
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: baseline;
    gap: 0.3125rem;
  }

  .contact-link-name {
    font-size: 0.75rem;
    color: var(--text-muted);
  }

  .contact-link-text {
    font-size: 0.875rem;
  }

  .send-message {
    width: 31.25rem;
  }

  .form-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.625rem;
  }

  .form-section {
    display: flex;
    flex-direction: column;
    gap: 0.3125rem;
    justify-content: center;
    align-items: baseline;
    margin: 0 0 0.75rem;
  }

  .form-label {
    color: var(--text-muted);
  }

  .form-input {
    width: 100%;
    padding: 0.75rem 0.875rem;
    border: 1px solid var(--primary-border-2);
    /* background-color: rgb(var(--primary-surface)); */
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    color: var(--text-primary);
    outline: none;
    transition: border-color 0.2s ease;
  }

  .form-input::placeholder,
  .form-text-area::placeholder {
    color: var(--primary-border-2);
    font-family: var(--primary-font);
  }

  .form-text-area {
    width: 100%;
    height: 9.0625rem;
    padding: 0.75rem 0.875rem;
    border: 1px solid var(--primary-border-2);
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    outline: none;
    transition: border-color 0.2s ease;
  }

  .send-btn {
    width: 100%;
    padding: 0.75rem;
    background-color: rgb(var(--blue-500));
    border: 1px solid transparent;
    border-radius: 0.3125rem;
    color: var(--text-primary);
  }

  .form-input:focus,
  .form-text-area:focus {
    border: 1px solid rgb(var(--blue-500));
  }
}

/* Tablets */
@media (max-width: 1024px) {
  .contact-sub {
    margin: 0 0 2.5rem;
  }

  .contact-grid {
    display: flex;
    gap: 2.5rem;
  }

  .contact-info {
    width: 22.5rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .available-badge {
    height: 2.8125rem;
    background-color: rgba(var(--text-success), 0.2);
    padding: 0.75rem 0.875rem;
    border: 1px solid rgba(var(--text-success), 0.4);
    border-radius: 0.5rem;
    display: flex;
    gap: 1rem;
    align-items: center;
  }

  .available-dot {
    width: 0.625rem;
    height: 0.625rem;
    border-radius: 3.125rem;
    background-color: rgb(var(--text-success));
  }

  .available-text {
    color: rgb(var(--text-success));
  }

  .contact-link {
    height: 4.0625rem;
    padding: 0.75rem 0.875rem;
    background-color: rgb(var(--primary-surface));
    border: 1px solid var(--primary-border);
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: baseline;
    gap: 0.3125rem;
  }

  .contact-link-name {
    font-size: 0.75rem;
    color: var(--text-muted);
  }

  .contact-link-text {
    font-size: 0.875rem;
  }

  .send-message {
    width: 31.25rem;
  }

  .form-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.625rem;
  }

  .form-section {
    display: flex;
    flex-direction: column;
    gap: 0.3125rem;
    justify-content: center;
    align-items: baseline;
    margin: 0 0 0.75rem;
  }

  .form-label {
    color: var(--text-muted);
  }

  .form-input {
    width: 100%;
    padding: 0.75rem 0.875rem;
    border: 1px solid var(--primary-border-2);
    /* background-color: rgb(var(--primary-surface)); */
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    color: var(--text-primary);
    outline: none;
    transition: border-color 0.2s ease;
  }

  .form-input::placeholder,
  .form-text-area::placeholder {
    color: var(--primary-border-2);
    font-family: var(--primary-font);
  }

  .form-text-area {
    width: 100%;
    height: 9.0625rem;
    padding: 0.75rem 0.875rem;
    border: 1px solid var(--primary-border-2);
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    outline: none;
    transition: border-color 0.2s ease;
  }

  .send-btn {
    width: 100%;
    padding: 0.75rem;
    background-color: rgb(var(--blue-500));
    border: 1px solid transparent;
    border-radius: 0.3125rem;
    color: var(--text-primary);
  }

  .form-input:focus,
  .form-text-area:focus {
    border: 1px solid rgb(var(--blue-500));
  }
}

/* Phones */
@media (max-width: 600px) {
  .contact-sub {
    margin: 0 0 2.5rem;
  }

  .contact-grid {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2.5rem;
  }

  .contact-info {
    width: 100%;
    display: flex;
    align-items: baseline;
    gap: 1rem;
  }

  .available-badge {
    width: 20rem;
    height: 2rem;
    background-color: rgba(var(--text-success), 0.2);
    padding: 0.75rem 0.875rem;
    border: 1px solid rgba(var(--text-success), 0.4);
    border-radius: 0.5rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }

  .available-dot {
    width: 0.5rem;
    height: 0.5rem;
    border-radius: 3.125rem;
    background-color: rgb(var(--text-success));
  }

  .available-text {
    font-size: 0.75rem;
    color: rgb(var(--text-success));
  }

  .contact-link-container {
    width: 100%;
    display: grid;
    gap: 0.5rem;
    grid-template-columns: repeat(2, 1fr);
  }

  .contact-link {
    width: 100%;
    height: 2.8625rem;
    padding: 0.75rem 0.475rem;
    background-color: rgb(var(--primary-surface));
    border: 1px solid var(--primary-border);
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: baseline;
    gap: 0.3125rem;
  }

  .contact-link-name {
    font-size: 0.45rem;
    color: var(--text-muted);
  }

  .contact-link-text {
    font-size: 0.49rem;
  }

  .send-message {
    width: 100%;
  }

  .contact-form {
    width: 100%;
  }

  .form-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.625rem;
  }

  .form-section {
    display: flex;
    flex-direction: column;
    gap: 0.3125rem;
    justify-content: center;
    align-items: baseline;
    margin: 0 0 0.75rem;
  }

  .form-label {
    color: var(--text-muted);
    font-size: 0.67rem;
  }

  .form-input {
    width: 100%;
    padding: 0.6rem 0.675rem;
    border: 1px solid var(--primary-border-2);
    /* background-color: rgb(var(--primary-surface)); */
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    color: var(--text-primary);
    outline: none;
    transition: border-color 0.2s ease;
  }

  .form-input::placeholder,
  .form-text-area::placeholder {
    color: var(--primary-border-2);
    font-family: var(--primary-font);
    font-size: 0.8rem;
  }

  .form-text-area {
    width: 100%;
    height: 9.0625rem;
    padding: 0.75rem 0.875rem;
    border: 1px solid var(--primary-border-2);
    background-color: rgba(255, 255, 255, 0.04);
    border-radius: 0.375rem;
    outline: none;
    transition: border-color 0.2s ease;
    color: var(--text-primary);
  }

  .send-btn {
    width: 100%;
    padding: 0.65rem;
    background-color: rgb(var(--blue-500));
    border: 1px solid transparent;
    border-radius: 0.3125rem;
    color: var(--text-primary);
    font-size: 1.2rem;
  }

  .form-input:focus,
  .form-text-area:focus {
    border: 1px solid rgb(var(--blue-500));
  }
}

